--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "psr-4":{
             "App\\":"app/",
             "Libs\\":"libs/"
-
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.4"
     }
 }
